// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApexBarChart renders with correct configuration 1`] = `
<div
  className="makeStyles-barChartContainer-1"
>
  <div />
  <div
    className="makeStyles-paginationContainer-2"
  >
    <span
      className="makeStyles-paginationLabel-3"
    >
      1 - 4
       of 
      4
    </span>
    <button
      aria-label="first page"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="chevron-left"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="chevron-right"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="last page"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`ApexBarChart should set colors to each bar based on region emissions 1`] = `
<div
  className="makeStyles-barChartContainer-16"
>
  <div
    style={
      Object {
        "alignSelf": "center",
        "display": "flex",
        "flexDirection": "column",
        "padding": "10px 45px",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "fontWeight": 500,
          "justifyContent": "space-between",
          "paddingBottom": "12px",
        }
      }
    >
      <div>
        Low carbon intensity
      </div>
      <div>
        High carbon intensity
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <div
        className="t-dot"
        data-testid="timeline-dot"
        style={
          Object {
            "backgroundColor": "#73B500",
            "borderRadius": "8px",
            "height": "15px",
            "width": "15px",
          }
        }
      />
      <div
        className="t-bar"
        style={
          Object {
            "backgroundColor": "#aaaaaa",
            "flexGrow": 2,
            "height": "1px",
          }
        }
      />
      <div
        className="t-dot"
        data-testid="timeline-dot"
        style={
          Object {
            "backgroundColor": "#00791E",
            "borderRadius": "8px",
            "height": "15px",
            "width": "15px",
          }
        }
      />
      <div
        className="t-bar"
        style={
          Object {
            "backgroundColor": "#aaaaaa",
            "flexGrow": 2,
            "height": "1px",
          }
        }
      />
      <div
        className="t-dot"
        data-testid="timeline-dot"
        style={
          Object {
            "backgroundColor": "#D99200",
            "borderRadius": "8px",
            "height": "15px",
            "width": "15px",
          }
        }
      />
      <div
        className="t-bar"
        style={
          Object {
            "backgroundColor": "#aaaaaa",
            "flexGrow": 2,
            "height": "1px",
          }
        }
      />
      <div
        className="t-dot"
        data-testid="timeline-dot"
        style={
          Object {
            "backgroundColor": "#DF5200",
            "borderRadius": "8px",
            "height": "15px",
            "width": "15px",
          }
        }
      />
      <div
        className="t-bar"
        style={
          Object {
            "backgroundColor": "#aaaaaa",
            "flexGrow": 2,
            "height": "1px",
          }
        }
      />
      <div
        className="t-dot"
        data-testid="timeline-dot"
        style={
          Object {
            "backgroundColor": "#790000",
            "borderRadius": "8px",
            "height": "15px",
            "width": "15px",
          }
        }
      />
    </div>
  </div>
  <div />
  <div
    className="makeStyles-paginationContainer-17"
  >
    <span
      className="makeStyles-paginationLabel-18"
    >
      1 - 4
       of 
      4
    </span>
    <button
      aria-label="first page"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="chevron-left"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="chevron-right"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </span>
    </button>
    <button
      aria-label="last page"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
